<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dark Angel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Dark Angel</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="bug_crash">Bug Crash</string>
    <string name="attack">Attack</string>
    <string name="select_bug">Select Bug</string>
</resources>
