<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:alpha="0.8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="40dp" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
