<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:alpha="0.8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="40dp" />

        <Button
            android:id="@+id/bugCrashButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/bug_crash"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/logout"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/button_logout_background"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
